<resources>
    <string name="app_name">TodoApp</string>
    <string name="Splash_welcome">Welcome to Todo App</string>

    <string name="login_login">SIGN IN</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_username_required">Username Required!!!</string>
    <string name="login_password_required">Password Require</string>
    <string name="login_invalid_login">Invalid username or password!!!</string>
    <string name="login_signin">Sign In</string>
    <string name="login_cancel">Cancel</string>

    <string name="quit_application">Exit From App?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_Title">Title</string>
    <string name="edit_Description">Description</string>
    <string name="edit_date">Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">High</string>
    <string name="edit_medium">Medium</string>
    <string name="edit_low">Low</string>
    <string name="edit_is_complete">Is Complete</string>
    <string name="edit_save">Save</string>
    <string name="edit_cancel_promt">Are you sure want to cancel edit??</string>
</resources>