<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e4588"
    android:orientation="vertical"
    tools:context=".EditFragment">

    <EditText
        android:id="@+id/edit_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:autofillHints="TodoTitle"
        android:ems="10"
        android:hint="@string/edit_Title"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/edit_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:ems="10"
        android:hint="@string/edit_Description"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="5sp"
        android:text="@string/edit_priority"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <RadioGroup
        android:id="@+id/edit_rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@color/color_high_priority"
            android:padding="0"
            android:paddingStart="0"
            android:paddingLeft="0"
            android:paddingTop="0"
            android:paddingEnd="0"
            android:paddingRight="0"
            android:paddingBottom="0"
            android:text="@string/edit_high"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/edit_rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@color/color_medium_priority"
            android:padding="0"
            android:paddingStart="0"
            android:paddingLeft="0"
            android:paddingTop="0"
            android:paddingEnd="0"
            android:paddingRight="0"
            android:paddingBottom="0"
            android:text="@string/edit_medium"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/edit_rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="@color/color_low_priority"
            android:padding="0"
            android:paddingStart="0"
            android:paddingLeft="0"
            android:paddingTop="0"
            android:paddingEnd="0"
            android:paddingRight="0"
            android:paddingBottom="0"
            android:text="@string/edit_low"
            android:textColor="#FFFFFF" />

    </RadioGroup>
    <EditText
        android:id="@+id/edit_txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:ems="10"
        android:hint="@string/edit_date"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <CheckBox
        android:id="@+id/edit_chk_iscomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_weight="0"
        android:text="@string/edit_is_complete"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:backgroundTint="#00BCD4"
            android:text="@string/edit_save" />


    </LinearLayout>

</LinearLayout>